# advent-of-code

./: .gitignore  README.md  pyproject.toml
src/: exc.py  main.py
src/aoc/days/: day_10.py  day_4.py  day_5.py  day_8.py
src/days/: day_1.py  day_10.py  day_11.py  day_15.py  day_18.py  day_2.py  day_24.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
src/stub/days/: day_1.pyi  day_10.pyi  day_11.pyi  day_2.pyi  day_21.pyi  day_3.pyi  day_4.pyi  day_5.pyi  day_6.pyi  day_7.pyi  day_8.pyi  day_9.pyi
src/stub/exc/: __init__.pyi
