[project]
name = "aoc2022"
description = "Advent Of Code 2022 solutions."
dynamic = ["version"]
authors = [{ name = "Eemil Kiviahde", email = "admin@coldheart.dev" }]
license = { file = "./LICENSE.md" }
readme = "./README.md"
dependencies = ["termcolor"]
requires-python = ">=3.11.5"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "main.__version__" }
